# generalized-emergency-index

./: LICENSE  README.md  gif_maker.py  main.py  pyproject.toml  requirements.txt
examples/data/: SIND_Tianjin_8_3_2_563_565.csv  SIND_Tianjin_8_6_1_180_181.csv
src/gei/: __init__.py  cli.py  core.py  visualization.py
tests/: test_smoke.py
