[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gei"
version = "0.1.0"
description = "Generalized Emergency Index computation for two-agent traffic conflicts."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.7",
    "Pillow>=9.5",
]

[project.scripts]
gei = "gei.cli:main"
gei-gif = "gei.visualization:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
